--- a/index1.html
+++ b/index1.html
@@ -557,7 +557,11 @@
             <div class="w-14 h-14 rounded-full flex items-center justify-center text-white font-bold text-xl">
                 <img src="./asstes/img/اساس الوسام logo.png" alt="logo">
             </div>
-            <span class="mr-3 text-2xl font-bold text-primary">أساس الوسام</span>
+            <!-- <span class="mr-3 text-2xl font-bold text-primary">أساس الوسام</span> -->
+             <div class="mr-4">
+                            <span class="text-2xl font-bold text-primary">أساس الوسام</span> <br/>
+                            <span class="text-accent text-sm">للأدوات الصحية والسباكة</span>
+                        </div>
         </div>
 
         <!-- Button on Left -->
@@ -1795,7 +1799,7 @@
             
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
                 <!-- Feature 1 -->
-                <div class="feature-card bg-white p-8 rounded-2xl shadow-md text-center transition duration-500" data-aos="fade-up" data-aos-delay="100">
+                <div class="feature-card bg-white p-8 rounded-2xl shadow-md text-center transition duration-500 " data-aos="fade-up" data-aos-delay="100">
                     <div class="w-20 h-20 mx-auto bg-primary rounded-full flex items-center justify-center text-white mb-6">
                         <i class="fas fa-award text-3xl"></i>
                     </div>
@@ -1850,7 +1854,7 @@
                         </div>
                     </div>
                     <p class="text-lg mb-6">"تعاملت مع أساس الوسام في عدة مشاريع وكانوا دائمًا عند حسن الظن. جودة المنتجات والخدمة المميزة جعلتهم المورد المفضل لدي"</p>
-                    <div class="flex text-accent">
+                    <div class="flex text-[#f0980c]">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -1869,7 +1873,7 @@
                         </div>
                     </div>
                     <p class="text-lg mb-6">"اشتريت جميع أدوات السباكة لفيلتي من أساس الوسام، وكان فريق الدعم الفني متعاون جداً وساعدني في اختيار الأفضل لمنزلي"</p>
-                    <div class="flex text-accent">
+                    <div class="flex text-[#f0980c]">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -1888,7 +1892,7 @@
                         </div>
                     </div>
                     <p class="text-lg mb-6">"نعمل مع أساس الوسام منذ 5 سنوات في مشاريعنا السكنية والتجارية. منتجات أصلية وأسعار منافسة وخدمة ما بعد البيع ممتازة"</p>
-                    <div class="flex text-accent">
+                    <div class="flex text-[#f0980c]">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -1914,8 +1918,8 @@
                 <div class="xl:col-span-2">
                     <!-- Logo and Brand -->
                     <div class="flex items-center mb-6">
-                        <div class="w-16 h-16 rounded-full bg-primary flex items-center justify-center text-white font-bold text-2xl floating">
-                            أوس
+                        <div class="w-16 h-16 rounded-full bg-white  flex items-center justify-center text-white font-bold text-2xl floating">
+                            <img src="./asstes/img/اساس الوسام logo.png" alt="">
                         </div>
                         <div class="mr-4">
                             <span class="text-2xl font-bold block">أساس الوسام</span>
@@ -1946,7 +1950,7 @@
                     <div class="mb-6">
                         <h5 class="font-semibold mb-4 text-lg text-accent">تابعنا على</h5>
                         <div class="flex space-x-3">
-                            <a href="#" class="social-icon w-12 h-12 rounded-xl flex items-center justify-center">
+                            <a href="#" class="social-icon ml-3 w-12 h-12 rounded-xl flex items-center justify-center">
                                 <i class="fab fa-twitter text-lg"></i>
                             </a>
                             <a href="#" class="social-icon w-12 h-12 rounded-xl flex items-center justify-center">
@@ -1955,9 +1959,7 @@
                             <a href="#" class="social-icon w-12 h-12 rounded-xl flex items-center justify-center">
                                 <i class="fab fa-facebook-f text-lg"></i>
                             </a>
-                            <a href="#" class="social-icon w-12 h-12 rounded-xl flex items-center justify-center">
-                                <i class="fab fa-youtube text-lg"></i>
-                            </a>
+                            
                             <a href="#" class="social-icon w-12 h-12 rounded-xl flex items-center justify-center">
                                 <i class="fab fa-linkedin-in text-lg"></i>
                             </a>
